diablocharactertracker.client/Kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diablo-client
  namespace: diablo
spec:
  selector:
    app: diablo-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
